[package]
name = "sonar"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]

[dependencies]
argon2rs = "0.2.5"
diesel = { version = "0.16.0", features = ["sqlite"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
dotenv = "0.9.0"
rand = "0.3"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket-simpleauth = "0.3.0"
